<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"

    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/kitten_cat_avatar_35_512"
        android:transitionName="t_logo_image" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anonymous_pro"
        android:text="@string/app_login_description"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:transitionName="t_logo_text" />

    <TextView
        android:id="@+id/logo_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anonymous_pro"
        android:text="Sign In to continue"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_login_username"
            android:textColor="#ffffff"
            android:textColorHint="@color/loginHintsColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_login_password"
            android:textColor="#ffffff"
            android:textColorHint="@color/loginHintsColor"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="@string/app_login_forget_password"
            android:textAlignment="textEnd"
            android:textColor="@color/loginHintsColor"
            android:textSize="12sp" />

        <Button
            android:id="@+id/login_buttom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#000000"
            android:text="@string/app_login_login"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/login_register_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="@string/app_login_register"
            android:textAlignment="center"
            android:textColor="@color/loginHintsColor"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/login_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:visibility="invisible"/>


    </LinearLayout>

</LinearLayout>